--- a/renderer/index.html
+++ b/renderer/index.html
@@ -20,7 +20,6 @@
         <a href="#" class="btn btn-link" id="selectAfina" disabled>Афіна</a>
         <a href="#" class="btn btn-link" id="selectParus" disabled>Парус</a>
         <a href="#" class="btn btn-link" id="select1C" disabled>1С</a>
-               
       </section>
     </header>
     <div class="panel" style="border: 0px;">
@@ -29,8 +28,16 @@
       </div>
       <div class="panel-nav">
         <!-- navigation components: tabs, breadcrumbs or pagination -->
-        
-        <div class="form-group" id="panelISPro">
+
+        <div id="home-panel">
+          <p>Програма <a href="https://github.com/sergey-untilov/multi-export" target="_blank">Multi Export</a>
+            виконує експорт даних із програмних систем: ІС-Про, Афіна, Парус, 1С та створює стандартні файли для
+            завантаження
+            у базу даних програмного комплексу <a href="https://a5buh.com" target="_blank">А5 Системз</a>.
+          </p>
+        </div>
+
+        <div class="form-group" id="ispro-panel">
           <div class="columns">
             <div class="column col-4">
               <label class="form-label" for="server-name">Сервер бази даних</label>
@@ -76,21 +83,26 @@
           </div>
         </div>
         <br />
-        <div class="columns">
-          <div class="column col-4">
-            <button class="btn btn-primary" id="runExport">Виконати експорт</button>
-          </div>
-          <div class="column col-8">
-            <div class="toast toast-success">
-              <button class="btn btn-clear float-right"></button>
-              Експорт виконано успішно. Створено файл D:\archive.zip.
+        <div id="control-panel">
+          <div class="columns">
+
+            <div class="column col-4">
+              <button class="btn btn-primary" id="runExport">Виконати експорт</button>
+            </div>
+            <div class="column col-8">
+              <div id="result-panel">
+                <div class="toast toast-success">
+                  <button class="btn btn-clear float-right"></button>
+                  Експорт виконано успішно. Створено файл D:\archive.zip.
+                </div>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </div>
   </div>
-  <div class="panel-body">
+  <div class="panel-body" id="body-panel">
     <!-- contents -->
     <table class="table table-striped table-hover">
       <thead>
@@ -105,14 +117,11 @@
         <tr>
           <td>Посади.csv</td>
         </tr>
-        <tr>
-          <td>Працівники.csv</td>
-        </tr>
       </tbody>
     </table>
     <br />
   </div>
-  <div class="panel-footer" style="padding: 0px;">
+  <div class="panel-footer" id="footer-panel" style="padding: 0px;">
     <!-- buttons or inputs -->
 
   </div>
