Start Ispro filemaker implementation.

--- a/renderer/index.html
+++ b/renderer/index.html
@@ -165,10 +165,11 @@
       <table class="table table-striped table-hover">
         <thead>
           <tr>
-            <th>Результат</th>
+            <th>Файл</th>
+            <th>Стан</th>
           </tr>
         </thead>
-        <tbody>
+        <tbody id="result-table">
           <tr>
             <td>Підрозділи.csv</td>
           </tr>
