Ispro Target started

--- a/renderer/index.html
+++ b/renderer/index.html
@@ -36,10 +36,11 @@
         <div id="home-panel" class="d-hide">
 
           <p>Програма <a href="https://github.com/sergey-untilov/multi-export" target="_blank">Multi Export</a>
-            виконує експорт даних із програмних систем і створює стандартні вихідні файли для імпорту довідників і облікових даних у систему <a href="https://a5buh.com"
-              target="_blank">А5 Бухгалтерія</a>.
+            виконує експорт даних із програмних систем і створює стандартні вихідні файли для імпорту довідників і
+            облікових даних у систему <a href="https://a5buh.com" target="_blank">А5 Бухгалтерія</a>.
           </p>
-          <p>Для виконання експорту, у верхноьому меню виберіть програмну систему, вкажіть параметри та натисніть кнопку Виконати експорт.</p>
+          <p>Для виконання експорту, у верхноьому меню виберіть програмну систему, вкажіть параметри та натисніть кнопку
+            Виконати експорт.</p>
 
           <h3>ІС-Про</h3>
           <p> Экспорт виконується безпосередньо із бази даних. Для підключення до бази даних потрібно вказати:</p>
@@ -48,10 +49,30 @@
             <li>Логін і пароль користувача бази даних (не користувача ІС-Про)</li>
             <li>Назву системної схеми бази даних, де розміщені загальносистемні довідники і константи</li>
             <li>Назву схеми бази даних підприємства, де розміщені таблиці із обліковими даними</li>
-            <li>Код структурної одниниці - тільки у разі, якщо у одній схемі бази даних ведеться облік структурних одиниць
+            <li>Код структурної одниниці - тільки у разі, якщо у одній схемі бази даних ведеться облік структурних
+              одиниць
             </li>
           </ul>
 
+          <!-- <div class="columns">
+            <div class="column col-6 col-xs-12">
+              <div class="card shadow">
+                <div class="card-header">
+                  <div class="card-title h5">Афіна</div>
+                  <div class="card-subtitle text-gray">Экспорт виконується із файлів бази даних</div>
+                </div>
+                <div class="card-body">
+                  <p>Для виконання експорту потрібно вказати:</p>
+                  <ul>
+                    <li>Каталог у якому розміщені файли бази даних</li>
+                  </ul>
+                </div>
+                <div class="card-footer">
+                  <button class="btn btn-primary"><img src="./icons/navigate_next.png"></img> </button>
+                </div>
+              </div>
+            </div>
+          </div> -->
 
           <h3>Афіна</h3>
           <p>Экспорт виконується із файлів бази даних. Для виконання експорту потрібно вказати:</p>
