Improvements for the Home panel

--- a/renderer/index.html
+++ b/renderer/index.html
@@ -35,67 +35,40 @@
 
         <div id="home-panel" class="d-hide">
 
-          <p>Програма <a href="https://github.com/sergey-untilov/multi-export" target="_blank">Multi Export</a>
-            виконує експорт даних із програмних систем і створює стандартні вихідні файли для імпорту довідників і
-            облікових даних у систему <a href="https://a5buh.com" target="_blank">А5 Бухгалтерія</a>.
+          <p>Експорт довідників і облікових даних із програмних систем та створення
+            стандартних вихідних файлів для імпорту у систему
+            <a href="https://a5buh.com" target="_blank">А5 Бухгалтерія</a>
           </p>
-          <p>Для виконання експорту, у верхноьому меню виберіть програмну систему, вкажіть параметри та натисніть кнопку
-            Виконати експорт.</p>
 
-          <h3>ІС-Про</h3>
-          <p> Экспорт виконується безпосередньо із бази даних. Для підключення до бази даних потрібно вказати:</p>
-          <ul>
-            <li>Назву (адресу) серверу бази даних</li>
-            <li>Логін і пароль користувача бази даних (не користувача ІС-Про)</li>
-            <li>Назву системної схеми бази даних, де розміщені загальносистемні довідники і константи</li>
-            <li>Назву схеми бази даних підприємства, де розміщені таблиці із обліковими даними</li>
-            <li>Код структурної одниниці - тільки у разі, якщо у одній схемі бази даних ведеться облік структурних
-              одиниць
-            </li>
-          </ul>
+          <h3 class="mt-3 mb-1 ispro">ІС-Про</h3>
+          <p>
+            Экспорт виконується безпосередньо із бази даних<br />
+            Для виконання експорту необхідно <a href="#" id="homeSelectISPro">вказати параметри підключення до бази
+              даних</a>
 
-          <!-- <div class="columns">
-            <div class="column col-6 col-xs-12">
-              <div class="card shadow">
-                <div class="card-header">
-                  <div class="card-title h5">Афіна</div>
-                  <div class="card-subtitle text-gray">Экспорт виконується із файлів бази даних</div>
-                </div>
-                <div class="card-body">
-                  <p>Для виконання експорту потрібно вказати:</p>
-                  <ul>
-                    <li>Каталог у якому розміщені файли бази даних</li>
-                  </ul>
-                </div>
-                <div class="card-footer">
-                  <button class="btn btn-primary"><img src="./icons/navigate_next.png"></img> </button>
-                </div>
-              </div>
-            </div>
-          </div> -->
+          </p>
 
-          <h3>Афіна</h3>
-          <p>Экспорт виконується із файлів бази даних. Для виконання експорту потрібно вказати:</p>
-          <ul>
-            <li>Каталог у якому розміщені файли бази даних</li>
-          </ul>
+          <h3 class="mt-3 mb-1 afina">Афіна</h3>
+          <p>
+            Экспорт виконується із файлів бази даних<br />
+            Для виконання експорту необхідно <a href="#" id="homeSelectAfina">вказати каталог у якому розміщені файли
+              бази даних</a>
 
-          <h3>Парус</h3>
-          <p>Экспорт виконується із файлів бази даних. Для виконання експорту потрібно вказати:</p>
-          <ul>
-            <li>Каталог у якому розміщені файли бази даних</li>
-          </ul>
+          </p>
 
-          <h3>1С</h3>
-          <p> Экспорт виконується із файлів, у які попередньо були вивантажені довідники і облікові відомості із бази
-            даних.
-            Для виконання експорту потрібно вказати:</p>
-          <ul>
-            <li>Каталог у якому розміщені вихідні файли</li>
-          </ul>
+          <h3 class="mt-2 mb-1 parus">Парус</h3>
+          <p>
+            Экспорт виконується із файлів бази даних<br />
+            Для виконання експорту необхідно <a href="#" id="homeSelectParus">вказати каталог у якому розміщені файли
+              бази даних</a>
+          </p>
 
-
-
+          <h3 class="mt-2 mb-1 C1">1С</h3>
+          <p>
+            Экспорт виконується із файлів, у які вивантажені довідники і облікові відомості<br />
+            Для виконання експорту необхідно <a href="#" id="homeSelect1C">вказати каталог у якому розміщені вихідні
+              файли</a>
+          </p>
 
         </div>
 
@@ -238,7 +211,7 @@
 
   <div class="panel-footer" id="footer-panel" style="padding: 0px;">
     <!-- buttons or inputs -->
-
+    <!-- <a href="https://github.com/sergey-untilov/multi-export" target="_blank">Multi Export</a> -->
   </div>
   </div>
   </div>
