--- a/renderer/index.html
+++ b/renderer/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Multi Export</title>
+  <title>MultiExport</title>
   <link rel="stylesheet" href="../node_modules/spectre.css/dist/spectre.min.css">
   <link rel="stylesheet" href="style.css">
 </head>
@@ -13,17 +13,22 @@
 
     <header class="navbar">
       <section class="navbar-section">
-        <a href="#" class="navbar-brand mr-2" id="selectHome">
-          <h1>Multi Export</h1>
+        <a href="#" class="navbar-brand mr-2 mt-2" id="selectHome">
+          <h1>MultiExport</h1>
         </a>
-        <!-- <h1 class="text-primary mt-2 mr-2">Multi Export</h1> -->
+        <!-- <h1 class="text-primary mt-2 mr-2">MultiExport</h1> -->
 
         <a href="#" class="btn btn-link" id="selectISPro">ІС-Про</a>
         <a href="#" class="btn btn-link" id="selectAfina">Афіна</a>
         <a href="#" class="btn btn-link" id="selectParus">Парус</a>
         <a href="#" class="btn btn-link" id="select1C">1С</a>
       </section>
+      <section class="navbar-section">
+        <a href="https://a5buh.com" target="_blank" class="btn btn-link">А5</a>
+        <a href="https://github.com/sergey-untilov/multi-export" target="_blank" class="btn btn-link">GitHub</a>
+      </section>
     </header>
+
     <div class="panel" style="border: 0px;">
       <div class="panel-header" style="padding: 0px;">
         <!-- <div class="panel-title">Експорт із бази даних системи "ІС-Про"</div> -->
@@ -211,7 +216,7 @@
 
   <div class="panel-footer" id="footer-panel" style="padding: 0px;">
     <!-- buttons or inputs -->
-    <!-- <a href="https://github.com/sergey-untilov/multi-export" target="_blank">Multi Export</a> -->
+    <!-- <a href="https://github.com/sergey-untilov/multi-export" target="_blank">MultiExport</a> -->
   </div>
   </div>
   </div>
