--- a/renderer/index.html
+++ b/renderer/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>MultiExport</title>
+  <title>МультіЕкспорт</title>
   <link rel="stylesheet" href="../node_modules/spectre.css/dist/spectre.min.css">
   <link rel="stylesheet" href="style.css">
 </head>
@@ -14,9 +14,9 @@
     <header class="navbar">
       <section class="navbar-section">
         <a href="#" class="navbar-brand mr-2 mt-2" id="selectHome">
-          <h1>MultiExport</h1>
+          <h1>МультіЕкспорт</h1>
         </a>
-        <!-- <h1 class="text-primary mt-2 mr-2">MultiExport</h1> -->
+        <!-- <h1 class="text-primary mt-2 mr-2">МультіЕкспорт</h1> -->
 
         <a href="#" class="btn btn-link" id="selectISPro">ІС-Про</a>
         <a href="#" class="btn btn-link" id="selectAfina">Афіна</a>
@@ -70,7 +70,7 @@
 
           <h3 class="mt-2 mb-1 C1">1С</h3>
           <p>
-            Экспорт виконується із файлів, у які вивантажені довідники і облікові відомості<br />
+            Экспорт виконується із файлів, у які вивантажено довідники і облікові відомості<br />
             Для виконання експорту необхідно <a href="#" id="homeSelect1C">вказати каталог у якому розміщені вихідні
               файли</a>
           </p>
@@ -216,7 +216,7 @@
 
   <div class="panel-footer" id="footer-panel" style="padding: 0px;">
     <!-- buttons or inputs -->
-    <!-- <a href="https://github.com/sergey-untilov/multi-export" target="_blank">MultiExport</a> -->
+    <!-- <a href="https://github.com/sergey-untilov/multi-export" target="_blank">МультіЕкспорт</a> -->
   </div>
   </div>
   </div>
