--- a/renderer/index.html
+++ b/renderer/index.html
@@ -13,10 +13,9 @@
 
     <header class="navbar">
       <section class="navbar-section">
-        <a href="#" class="navbar-brand mr-2 mt-2" id="selectHome">
-          <h1>МультіЕкспорт</h1>
+        <a href="#" class="btn btn-link mt-4 mb-8 mr-4 ml-4" id="selectHome">
+          <h2>МультіЕкспорт</h2>
         </a>
-
         <a href="#" class="btn btn-link" id="selectISPro">ІС-Про</a>
         <a href="#" class="btn btn-link" id="selectAfina">Афіна</a>
         <a href="#" class="btn btn-link" id="selectParus">Парус</a>
@@ -27,12 +26,12 @@
           <img src="../assets/images/a5.png" width="24" height="24" alt="A5">
         </a>
         <a href="#" class="btn btn-link black-white" id="selectGitHub">
-          <img class="black-white" src="../assets/images/github.png" width="22" height="22" alt="GitHub">
+          <img src="../assets/images/github-green.png" style="padding-top: 2px;" width="22" height="22" alt="GitHub">
         </a>
       </section>
     </header>
 
-    <div class="panel" style="border: 0px;">
+    <div class="panel" style="border: 0px; padding: 10px;">
       <div class="panel-header" style="padding: 0px;">
       </div>
       <div class="panel-nav">
