Layout and style

--- a/renderer/index.html
+++ b/renderer/index.html
@@ -9,17 +9,17 @@
 </head>
 
 <body>
-  <div class="container">
+  <div class="container" style="border: 0px; padding-top: 4px;">
 
     <header class="navbar">
-      <section class="navbar-section">
-        <a href="#" class="btn btn-link mt-4 mb-8 mr-4 ml-4" id="selectHome">
-          <h2>МультіЕкспорт</h2>
+      <section class="navbar-section"">
+        <a href="#" class="btn btn-link mr-2 brand" id="selectHome">
+          МультіЕкспорт
         </a>
-        <a href="#" class="btn btn-link" id="selectISPro">ІС-Про</a>
-        <a href="#" class="btn btn-link" id="selectAfina">Афіна</a>
-        <a href="#" class="btn btn-link" id="selectParus">Парус</a>
-        <a href="#" class="btn btn-link" id="select1C">1С</a>
+        <a href="#" class="btn btn-link menu-item" id="selectISPro">ІС-Про</a>
+        <a href="#" class="btn btn-link menu-item" id="selectAfina">Афіна</a>
+        <a href="#" class="btn btn-link menu-item" id="selectParus">Парус</a>
+        <a href="#" class="btn btn-link menu-item" id="select1C">1С</a>
       </section>
       <section class="navbar-section">
         <a href="#" class="btn btn-link black-white" id="selectA5">
@@ -39,7 +39,7 @@
 
         <!-- Home panel -->
 
-        <div id="home-panel" class="d-hide">
+        <div id="home-panel" class="d-hide" style="border: 0px; padding-top: 10px;">
 
           <p>Експорт довідників і облікових даних із програмних систем та створення
             стандартних вихідних файлів для імпорту у систему
