Layout and style.

--- a/renderer/index.html
+++ b/renderer/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>МультіЕкспорт</title>
+  <title>А5 Експорт</title>
   <link rel="stylesheet" href="../multi-export.css">
   <link rel="stylesheet" href="style.css">
 </head>
@@ -13,8 +13,8 @@
 
     <header class="navbar">
       <section class="navbar-section"">
-        <a href="#" class="btn btn-link mr-2 brand" id="selectHome">
-          МультіЕкспорт
+        <a href=" #" class="btn btn-link mr-2 brand" id="selectHome">
+        А5 Експорт
         </a>
         <a href="#" class="btn btn-link menu-item" id="selectISPro">ІС-Про</a>
         <a href="#" class="btn btn-link menu-item" id="selectAfina">Афіна</a>
@@ -41,37 +41,45 @@
 
         <div id="home-panel" class="d-hide" style="border: 0px; padding-top: 10px;">
 
-          <p>Експорт довідників і облікових даних із програмних систем та створення
+          <p>Експорт довідників і даних обліку із програмних систем, створення
             стандартних вихідних файлів для імпорту у систему
             <a href="#" id="homeSelectA5">А5 Бухгалтерія</a>
           </p>
 
-          <h3 class="mt-3 mb-1 ispro">ІС-Про</h3>
+          <a href="#" class="btn btn-link system-caption" id="captionISPro">
+            <h4 class="mt-3 mb-1 ispro">ІС-Про</h4>
+          </a>
           <p>
-            Экспорт виконується безпосередньо із бази даних<br />
+            Експорт виконується безпосередньо із бази даних<br />
             Для виконання експорту необхідно <a href="#" id="homeSelectISPro">вказати параметри підключення до бази
               даних</a>
 
           </p>
 
-          <h3 class="mt-3 mb-1 afina">Афіна</h3>
+          <a href="#" class="btn btn-link system-caption" id="captionAfina">
+            <h4 class="mt-3 mb-1 afina">Афіна</h4>
+          </a>
           <p>
-            Экспорт виконується із файлів бази даних<br />
+            Експорт виконується із файлів бази даних<br />
             Для виконання експорту необхідно <a href="#" id="homeSelectAfina">вказати каталог у якому розміщені файли
               бази даних</a>
 
           </p>
 
-          <h3 class="mt-2 mb-1 parus">Парус</h3>
+          <a href="#" class="btn btn-link system-caption" id="captionParus">
+            <h4 class="mt-3 mb-1 parus">Парус</h4>
+          </a>
           <p>
-            Экспорт виконується із файлів бази даних<br />
+            Експорт виконується із файлів бази даних<br />
             Для виконання експорту необхідно <a href="#" id="homeSelectParus">вказати каталог у якому розміщені файли
               бази даних</a>
           </p>
 
-          <h3 class="mt-2 mb-1 C1">1С</h3>
+          <a href="#" class="btn btn-link system-caption" id="caption1C">
+            <h4 class="mt-3 mb-1 C1">1С</h4>
+          </a>
           <p>
-            Экспорт виконується із файлів, у які вивантажено довідники і облікові відомості<br />
+            Експорт виконується із файлів, у які вивантажено довідники і облікові відомості<br />
             Для виконання експорту необхідно <a href="#" id="homeSelect1C">вказати каталог у якому розміщені вихідні
               файли</a>
           </p>
