--- a/renderer/index.html
+++ b/renderer/index.html
@@ -16,7 +16,7 @@
         <a href=" #" class="btn btn-link mr-2 brand" id="selectHome">
         А5 Експорт
         </a>
-        <a href="#" class="btn btn-link menu-item" id="selectISPro">ІС-Про</a>
+        <a href="#" class="btn btn-link menu-item" id="selectISPro">ІС-про</a>
         <a href="#" class="btn btn-link menu-item" id="selectAfina">Афіна</a>
         <a href="#" class="btn btn-link menu-item" id="selectParus">Парус</a>
         <a href="#" class="btn btn-link menu-item" id="select1C">1С</a>
@@ -47,7 +47,7 @@
           </p>
 
           <a href="#" class="btn btn-link system-caption" id="captionISPro">
-            <h4 class="mt-3 mb-1 ispro">ІС-Про</h4>
+            <h4 class="mt-3 mb-1 ispro">ІС-про</h4>
           </a>
           <p>
             Експорт виконується безпосередньо із бази даних<br />
