Select directory buttons.

--- a/renderer/index.html
+++ b/renderer/index.html
@@ -130,7 +130,14 @@
             <div class="columns">
               <div class="column col-8">
                 <label class="form-label" for="afina-db-path">Каталог бази даних</label>
-                <input class="form-input" type="text" id="afina-db-path" placeholder="C:\Afina\DB">
+                <div class="columns">
+                  <div class="column col-11">
+                    <input class="form-input" type="text" id="afina-db-path" placeholder="C:\Afina\DB">
+                  </div>
+                  <div class="column col-1">
+                    <button class="btn" id="select-afina-path">...</button>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -141,7 +148,14 @@
             <div class="columns">
               <div class="column col-8">
                 <label class="form-label" for="parus-db-path">Каталог бази даних</label>
-                <input class="form-input" type="text" id="parus-db-path" placeholder="C:\Parus\DB">
+                <div class="columns">
+                  <div class="column col-11">
+                    <input class="form-input" type="text" id="parus-db-path" placeholder="C:\Parus\DB">
+                  </div>
+                  <div class="column col-1">
+                    <button class="btn" id="select-parus-path">...</button>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -152,7 +166,14 @@
             <div class="columns">
               <div class="column col-8">
                 <label class="form-label" for="c1-db-path">Каталог вихідних файлів</label>
-                <input class="form-input" type="text" id="c1-db-path" placeholder="C:\1C\Export">
+                <div class="columns">
+                  <div class="column col-11">
+                    <input class="form-input" type="text" id="c1-db-path" placeholder="C:\1C\Export">
+                  </div>
+                  <div class="column col-1">
+                    <button class="btn" id="select-c1-path">...</button>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -164,7 +185,14 @@
             <div class="columns">
               <div class="column col-8">
                 <label class="form-label" for="target-path">Каталог для збереження файлів</label>
-                <input class="form-input" type="text" id="target-path" placeholder="C:\">
+                <div class="columns">
+                  <div class="column col-11">
+                    <input class="form-input" type="text" id="target-path" placeholder="C:\">
+                  </div>
+                  <div class="column col-1">
+                    <button class="btn" id="select-target-path">...</button>
+                  </div>
+                </div>
               </div>
               <div class="column col-4">
                 <label class="form-label" for="is-arch-files">Додатково</label>
