--- a/renderer/index.html
+++ b/renderer/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>А5 Експорт</title>
+  <title>Мульті-Експорт</title>
   <link rel="stylesheet" href="../multi-export.css">
   <link rel="stylesheet" href="style.css">
 </head>
@@ -14,7 +14,7 @@
     <header class="navbar">
       <section class="navbar-section"">
         <a href=" #" class="btn btn-link mr-2 brand" id="selectHome">
-        А5 Експорт
+        Мульті-Експорт
         </a>
         <a href="#" class="btn btn-link menu-item" id="selectISPro">ІС-про</a>
         <a href="#" class="btn btn-link menu-item" id="selectAfina">Афіна</a>
