--- a/renderer/index.html
+++ b/renderer/index.html
@@ -41,8 +41,8 @@
 
         <div id="home-panel" class="d-hide" style="border: 0px; padding-top: 10px;">
 
-          <p>Експорт довідників і даних обліку із програмних систем, створення
-            стандартних вихідних файлів для імпорту у систему
+          <p>Експорт довідників і даних обліку із програмних систем.<br />
+            Cтворення стандартних вихідних файлів для імпорту у систему
             <a href="#" id="homeSelectA5">А5 Бухгалтерія</a>
           </p>
 
