--- a/renderer/index.html
+++ b/renderer/index.html
@@ -109,19 +109,26 @@
             </div>
             <br />
             <div class="columns">
-              <div class="column col-4">
+              <div class="column col-3">
                 <label class="form-label" for="sys-schema-name">Cистемна схема БД</label>
                 <input class="form-input" type="text" id="sys-schema-name" placeholder="i711_sys">
               </div>
-              <div class="column col-4">
+              <div class="column col-3">
                 <label class="form-label" for="org-schema-name">Схема БД організації</label>
                 <input class="form-input" type="text" id="org-schema-name" placeholder="i711_001">
               </div>
-              <div class="column col-4">
+              <div class="column col-3">
                 <label class="form-label" for="code-se">Код структурної одиниці</label>
                 <input class="form-input" type="text" id="code-se" placeholder="Не обов'язково">
               </div>
+              <div class="column col-3">
+                <label class="form-label" for="code-dep">Код підрозділу</label>
+                <input class="form-input" type="text" id="code-dep" placeholder="Не обов'язково">
+              </div>
             </div>
+            <!-- <br /> -->
+            <!-- <div class="columns">
+            </div>             -->
           </div>
 
           <!-- Afina params panel -->
