--- a/renderer/index.html
+++ b/renderer/index.html
@@ -20,6 +20,7 @@
         <a href="#" class="btn btn-link menu-item" id="selectAfina">Афіна</a>
         <a href="#" class="btn btn-link menu-item" id="selectParus">Парус</a>
         <a href="#" class="btn btn-link menu-item" id="select1C">1С</a>
+        <a href="#" class="btn btn-link menu-item" id="selectOsvita">Освіта</a>
       </section>
       <section class="navbar-section">
         <a href="#" class="btn btn-link black-white" id="selectA5">
@@ -82,6 +83,16 @@
             Експорт виконується із файлів, у які вивантажено довідники і облікові відомості<br />
             Для виконання експорту необхідно <a href="#" id="homeSelect1C">вказати каталог у якому розміщені вихідні
               файли</a>
+          </p>
+
+          <a href="#" class="btn btn-link system-caption" id="captionOsvita">
+            <h4 class="mt-3 mb-1 osvita">Освіта</h4>
+          </a>
+          <p>
+            Експорт виконується із файлів бази даних<br />
+            Для виконання експорту необхідно <a href="#" id="homeSelectOsvita">вказати каталог у якому розміщені файли
+              бази даних</a>
+
           </p>
 
         </div>
@@ -179,6 +190,24 @@
                   </div>
                   <div class="column col-1">
                     <button class="btn" id="select-c1-path">...</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- Osvita params panel -->
+
+          <div id="osvita-panel">
+            <div class="columns">
+              <div class="column col-8">
+                <label class="form-label" for="osvita-db-path">Каталог бази даних</label>
+                <div class="columns">
+                  <div class="column col-11">
+                    <input class="form-input" type="text" id="osvita-db-path" placeholder="C:\Osvita\DB">
+                  </div>
+                  <div class="column col-1">
+                    <button class="btn" id="select-osvita-path">...</button>
                   </div>
                 </div>
               </div>
